# netbird

./: .gitignore  ADDITIONAL_ISSUES_FOUND.md  ANSIBLE_AUDIT_REPORT.md  ARCHITECTURE.md  CONFIGURATION_AUDIT_SUMMARY.md  CONFIGURATION_VERIFICATION_REPORT.md  DEPLOYMENT_FIXES_APPLIED.md  DEPLOYMENT_READINESS.md  DEPLOYMENT_READY_2026-02-23.md  FINAL_SECURITY_SCAN.txt  FIXES_APPLIED.md  MANAGEMENT_JSON_FIX.md  MANAGEMENT_JSON_VALIDATION_REPORT.md  MANUAL_CONFIGURATION_GUIDE.md  MONITORING_TUTORIAL.md  Makefile  NETBIRD_FEATURE_ANALYSIS.md  QUICK_FIX_SUMMARY.txt  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_CHECKLIST_BEFORE_GITHUB.md  deploy-monitoring.sh  getting-started-with-zatadel.sh  getting-started-with-zitadel.sh  netbird-acl-config.json  netbird-security-setup.sh  netbird-zero-trust-config.md  netbird_deployment.md  script.sh  temp_ingester_config.yaml
.marscode/: deviceInfo.json
.vivus/: instructions.md
ansible/: playbook.yml
ansible-automation/: README.md  ansible.cfg  inventory.yaml  inventory.yaml.save  inventory.yaml.save.1  inventory.yml  playbook.yml
argocd_deployment/: nginx-values.yaml
clients/: inventory.yaml  playbook.yml
config/: client.config.example.json  client.config.template.json
configuration/: ansible.cfg
deploy/: 02-configure-environment.sh  03-create-docker-compose.sh  05-configure-keycloak.sh  DEPLOYMENT_README.md  README.md  deploy_keycloak.yml  forward-ports.sh  inventory.ini  requirements.yml  restart-netbird.sh  (+1 more)
monitor-netbird/exporter/: Cargo.toml  Dockerfile  README.md
monitor-netbird/exporter/src/: main.rs
(+484 files in other folders)
