[package]
name = "netbird-events-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

# Async SQLite wrapper for tokio
tokio-rusqlite = "0.7"

# Must match tokio-rusqlite's compatible rusqlite version.
# Use the `bundled` feature to statically link SQLite into the binary
# to avoid runtime ABI mismatches between builder and runtime images.
rusqlite = { version = "0.37", features = ["bundled"] }

# HTTP client for Loki - use native-tls to match OpenSSL 1.1
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "native-tls"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
chrono = { version = "0.4", features = ["serde", "clock"] }

# Error handling
anyhow = "1"

# Logging + tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Optional: environment variable loading
dotenvy = "0.15"
